--- a/app/src/main/res/layout/create_post_item.xml
+++ b/app/src/main/res/layout/create_post_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    app:cardElevation="0dp"
     android:layout_margin="8dp"
     app:cardBackgroundColor="#fff"
     app:cardCornerRadius="20dp">
