--- a/app/src/main/res/layout/story_container.xml
+++ b/app/src/main/res/layout/story_container.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:padding="16dp"
+    app:cardElevation="0dp"
     app:cardBackgroundColor="#fff"
     app:cardCornerRadius="20dp">
 
