--- a/app/src/main/res/layout/fragment_upload_avatar.xml
+++ b/app/src/main/res/layout/fragment_upload_avatar.xml
@@ -2,24 +2,59 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_margin="16dp"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivAvatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_upload"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/regular"
+        android:gravity="center"
+        android:text="Choose one of the default avatars or upload your own 😊"
+        android:textColor="#000"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btUploadPhoto"
-        android:layout_marginTop="30dp"
-        android:text="Upload"
-        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
+    <ImageView
+        android:layout_marginTop="32dp"
+        android:id="@+id/ivAvatar"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/avatar_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="16dp"
+        android:id="@+id/rvAvatars"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />
+
+    <Button
+        android:textSize="16sp"
+        android:layout_marginBottom="32dp"
+        android:id="@+id/btUploadPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:textSize="18sp"
+        android:fontFamily="@font/regular"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/btChooseFromGallery"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:text="Choose from gallery"
+        app:layout_constraintBottom_toTopOf="@+id/btUploadPhoto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
