--- a/app/src/main/res/layout/user_interactions_layout.xml
+++ b/app/src/main/res/layout/user_interactions_layout.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/llLikes"
@@ -27,16 +26,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
-            android:text="1500"
             android:textColor="#000"
             android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginStart="32dp"
         android:id="@+id/llComments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/llLikes"
@@ -55,7 +53,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
-            android:text="120"
             android:textColor="#000"
             android:textSize="12sp" />
     </LinearLayout>
@@ -81,7 +78,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
-            android:text="155"
             android:textColor="#000"
             android:textSize="12sp" />
     </LinearLayout>
