--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,29 +2,62 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
-    <EditText
-        android:layout_marginTop="16dp"
-        android:hint="Email"
+    <TextView
+        android:id="@+id/tvGetStarted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/medium"
+        android:text="Login"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.gvelesiani.socialx.customview.InputView
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:layout_marginTop="16dp"
-        android:hint="Password"
+        app:layout_constraintTop_toBottomOf="@+id/tvGetStarted"
+        app:setHint="Email address"
+        app:setImage="@drawable/mail"
+        app:setTitle="Email Address" />
+
+    <com.gvelesiani.socialx.customview.InputView
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/etEmail" />
+        android:layout_marginTop="16dp"
+        app:isPasswordInput="true"
+        app:layout_constraintTop_toBottomOf="@id/etEmail"
+        app:setHint="Password"
+        app:setImage="@drawable/lock"
+        app:setTitle="Password" />
 
     <Button
-        android:layout_marginTop="16dp"
-        android:text="Log in"
         android:id="@+id/btLogin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_height="48dp"
+        android:fontFamily="@font/regular"
+        android:text="Log in"
         app:layout_constraintTop_toBottomOf="@id/etPassword" />
+
+    <TextView
+        android:fontFamily="@font/light"
+        android:textColor="#000"
+        android:gravity="center"
+        android:id="@+id/tvNotRegistered"
+        app:layout_constraintTop_toBottomOf="@id/btLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_marginTop="8dp"
+        android:text="If you aren't registered yet, Register now!"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
