--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -64,9 +64,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
+        tools:listitem="@layout/comment_item"
+        app:layout_constraintBottom_toTopOf="@id/addComment"
         android:clipToPadding="true"
         android:nestedScrollingEnabled="false"
-        android:paddingBottom="100dp"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         tools:layout_editor_absoluteX="16dp" />
 
