- added comment likes out of scope: - introduced Transformer files - all useCases use BaseUseCase now

--- a/app/src/main/res/drawable/ic_like.xml
+++ b/app/src/main/res/drawable/ic_like.xml
@@ -6,13 +6,13 @@
   <path
       android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
       android:strokeAlpha="0.1"
-      android:fillColor="#5458F7"
+      android:fillColor="@color/liked"
       android:fillAlpha="0.1"/>
   <path
       android:pathData="M16.042,27.167H13.617C13.188,27.167 12.777,26.996 12.474,26.693C12.17,26.39 12,25.979 12,25.55V19.892C12,19.463 12.17,19.052 12.474,18.749C12.777,18.445 13.188,18.275 13.617,18.275H16.042M21.7,16.658V13.425C21.7,12.782 21.444,12.165 20.99,11.71C20.535,11.255 19.918,11 19.275,11L16.042,18.275V27.167H25.16C25.549,27.171 25.928,27.034 26.225,26.782C26.522,26.529 26.718,26.178 26.776,25.792L27.892,18.517C27.927,18.286 27.911,18.049 27.846,17.824C27.781,17.599 27.667,17.391 27.513,17.214C27.36,17.037 27.169,16.896 26.955,16.8C26.742,16.704 26.51,16.656 26.275,16.658H21.7Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.61666"
       android:fillColor="#00000000"
-      android:strokeColor="#5458F7"
+      android:strokeColor="@color/liked"
       android:strokeLineCap="round"/>
 </vector>
