--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginTop="8dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivUserAvatar"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_like"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="40dp"
-        android:layout_height="40dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -46,41 +46,67 @@
     </LinearLayout>
 
     <TextView
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/medium"
-        android:textSize="12sp"
-        android:textColor="#9597A1"
         android:id="@+id/btLike"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/medium"
         android:text="Like"
+        android:textColor="@color/comment_like_txt"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
-        android:layout_marginTop="8dp"
         android:id="@+id/btReply"
-        android:fontFamily="@font/medium"
-        android:textSize="12sp"
-        android:textColor="#9597A1"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/medium"
         android:text="Reply"
+        android:textColor="#9597A1"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/btLike"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
+    <LinearLayout
+        android:id="@+id/llLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/btReply"
+        app:layout_constraintStart_toEndOf="@id/btReply"
+        app:layout_constraintTop_toTopOf="@id/btReply">
+
+        <TextView
+            android:id="@+id/tvLikes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/medium"
+            android:visibility="gone"
+            android:textColor="#9597A1"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/ivLikes"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_like" />
+    </LinearLayout>
+
     <TextView
+        android:id="@+id/tvCreatedAt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCreatedAt"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/light"
         android:text="15 min ago"
         android:textColor="#9597A1"
         android:textSize="10sp"
         android:textStyle="italic"
-        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/btReply"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="@+id/btReply" />
